# VideoBox

./: .gitignore  CMakeLists.txt  main.c  main.cpp  test.c  test.cpp  test.h
libs/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
src/: audio_filter.cpp  audio_filter.h  audio_filter.hpp  audio_resample.hpp  concat.cpp  concat.h  concat_add_title.cpp  concat_add_title.h  concat_bgm.cpp  concat_bgm.h  demux_decode.c  demux_decode.cpp  demux_decode.h  demux_decode.hpp  main.c  main.cpp  mix_bgm.cpp  multi-mux.cpp  multi-mux.h  multi-mux.hpp  mux_encode.c  mux_encode.cpp  mux_encode.h  mux_encode.hpp  mux_title.cpp  mux_title.h  resample.c  resample.cpp  resample.h  rtmp.cpp  video_encode_x264.hpp  video_filter.hpp  x264_encode.cpp  x264_encode.h
src/codec/: decode.c  decode.cpp  decode.h  encode.c  encode.cpp  encode.h
src/filter/: audio_filter.cpp  audio_filter.h  blur_filter.cpp  blur_filter.h  filter.cpp  filter.h  filter_common.cpp  filter_common.h  mix_filter.cpp  mix_filter.h  video_filter.cpp  video_filter.h
src/functions/: concat_add_title.cpp  concat_add_title.h  concat_bgm.cpp  concat_bgm.h  filters.cpp  filters.h  mix_bgm.cpp  mix_bgm.h  mux_title.cpp  mux_title.h  rtmp.cpp  rtmp.h
src/image/: scale.c  scale.h
src/mux/: Track.cpp  Track.h  concat.cpp  concat.h  demux.cpp  demux.h  mux.cpp  mux.h  mux_blur_title.cpp  mux_blur_title.h  mux_comman.h  mux_common.h  muxer.cpp  muxer.h
src/muxing/: concat.c  demuxing.c  demuxing.cpp  demuxing.h  mux_comman.h  muxing.c  muxing.cpp  muxing.h
src/test/: filter_audio.cpp  filter_audio.h  get_info.cpp  get_info.h  mux_encode.cpp  mux_encode.h  resample.cpp  resample.h  test_demuxer.cpp  test_demuxer.h  test_io.hpp  test_mux.cpp  test_muxer.cpp  test_muxer.h  test_util.cpp  test_util.h  x264.cpp  x264.h
src/util/: screenshot.c
src/utils/: error.cpp  error.h  io.cpp  io.h  log.cpp  log.h  snapshot.c  snapshot.cpp  snapshot.h
